# camera-service

./: CMakeLists.txt  CONTRIBUTING.md  README.md  build.mk  common.mk  parse_compilation.py  qmmf-sdk.pc.in
common/camera-meta/: CMakeLists.txt  qmmf_camera_metadata.cpp  qmmf_camera_metadata.pc.in  qmmf_vendor_tag_descriptor.cpp
common/cameraadaptor/: Android.mk  CMakeLists.txt  qmmf_camera3_device_client.cc  qmmf_camera3_device_client.h  qmmf_camera3_internal_types.h  qmmf_camera3_monitor.cc  qmmf_camera3_monitor.h  qmmf_camera3_prepare_handler.cc  qmmf_camera3_prepare_handler.h  qmmf_camera3_request_handler.cc  qmmf_camera3_request_handler.h  qmmf_camera3_smooth_zoom.cc  qmmf_camera3_smooth_zoom.h  qmmf_camera3_stream.cc  qmmf_camera3_stream.h  qmmf_camera3_types.h  qmmf_camera3_utils.cc  qmmf_camera3_utils.h
common/cameraadaptor/gtest/: CMakeLists.txt  qmmf_camera_adaptor_gtest.cc  qmmf_camera_adaptor_gtest.h  qmmf_dual_camera_adaptor_gtest.cc  qmmf_dual_camera_adaptor_gtest.h
common/cameraadaptor/test/: CMakeLists.txt  camera_factory_test.cc  camera_factory_test.h
common/config/: CMakeLists.txt  qmmf_config.cc  qmmf_config.h  qmmf_config.pc.in
common/interfaces/: CMakeLists.txt  qmmf_camera3_device_intf.h  qmmf_recorder_service_intf.h
common/memory/: Android.mk  CMakeLists.txt  qmmf_dmabuf_interface.cc  qmmf_dmabuf_interface.h  qmmf_gbm_interface.cc  qmmf_gbm_interface.h  qmmf_gralloc1_interface.cc  qmmf_gralloc1_interface.h  qmmf_gralloc2_interface.cc  qmmf_gralloc2_interface.h  qmmf_gralloc_interface.cc  qmmf_gralloc_interface.h  qmmf_memory_interface.cc  qmmf_memory_interface.h  qmmf_memory_interface_defs.h
common/propertyvault/: CMakeLists.txt  qmmf_propertyvault.cc  qmmf_propertyvault.h
common/proto/: CMakeLists.txt  qmmf.proto  qmmf_proto.pc.in
common/resizer-c2d/: Android.mk  CMakeLists.txt  qmmf_resizer_c2d.cc  qmmf_resizer_c2d.h
common/resizer-fastCV/: Android.mk  CMakeLists.txt  qmmf_resizer_fastCV.cc  qmmf_resizer_fastCV.h
common/resizer-interface/: qmmf_resizer_interface.h
common/resizer-neon/: Android.mk  CMakeLists.txt  qmmf_resizer_neon.cc  qmmf_resizer_neon.h  res_neon.cc  res_neon.h  res_neon_prv.h
common/utils/: Android.mk  CMakeLists.txt  qmmf_color_format.h  qmmf_common_utils.h  qmmf_common_utils_defs.h  qmmf_condition.cc  qmmf_condition.h  qmmf_log.h  qmmf_thread.cc  qmmf_thread.h  qmmf_utils.pc.in
config/LE-apq8009/: CMakeLists.txt
config/LE-apq8053/: CMakeLists.txt
config/LE-kalama/: CMakeLists.txt
config/LE-qcs605/: CMakeLists.txt
config/LE-qcs6490/: CMakeLists.txt
config/LE-qrb5165/: CMakeLists.txt
config/LE-qrbx210/: CMakeLists.txt
config/LE-sdmsteppe/: CMakeLists.txt
config/common/: CMakeLists.txt
config/kalama/: CMakeLists.txt
config/pineapple/: CMakeLists.txt
config/qcm2290-mtp/: CMakeLists.txt
config/qcm6490/: CMakeLists.txt
config/qcs6490/: CMakeLists.txt
config/qcs8300/: CMakeLists.txt
config/qcs9100/: CMakeLists.txt
config/qimsdk/: CMakeLists.txt
config/qrb5165/: CMakeLists.txt
config/qrbx210/: CMakeLists.txt
debian/: changelog  control  copyright  libqmmf-client.install  libqmmf-common.install  libqmmf-dev.install  libqmmf1-qcm6490.install  libqmmf1-qcs8300.install  libqmmf1-qcs9100.install  qcom-camera-server.install  qcom-camera-server.postinst  rules
include/qmmf-sdk/: qmmf_buffer.h  qmmf_camera_metadata.h  qmmf_offline_camera_params.h  qmmf_offline_jpeg_params.h  qmmf_recorder.h  qmmf_recorder_extra_param.h  qmmf_recorder_extra_param_tags.h  qmmf_recorder_params.h  qmmf_vendor_tag_descriptor.h
include/system/: camera_metadata.h  camera_metadata_tags.h
qmmf-server/: Android.mk  CMakeLists.txt  cam-server-env  cam-server.ini  qmmf_server_main.cc
qmmf-server/service/: cam-server-base.service  cam-server-base.service.in  qmmf-server-base.service  qmmf-server-cam-arch-v1.service  qmmf-server-cam-arch-v2-usrgrp.service  qmmf-server-cam-arch-v2-xdg.service  qmmf-server-cam-arch-v2.service
recorder/src/client/: Android.mk  CMakeLists.txt  qmmf_recorder.cc  qmmf_recorder_client.cc  qmmf_recorder_client.h  qmmf_recorder_extra_param.cc  qmmf_recorder_service_intf.h
recorder/src/service/: Android.mk  CMakeLists.txt  qmmf_camera_context.cc  qmmf_camera_context.h  qmmf_camera_context_hal1.cc  qmmf_camera_context_hal1.h  qmmf_camera_frc.cc  qmmf_camera_frc.h  qmmf_camera_interface.h  qmmf_camera_rescaler.cc  qmmf_camera_rescaler.h  qmmf_camera_source.cc  qmmf_camera_source.h  qmmf_offline_jpegenc_impl.cc  qmmf_offline_jpegenc_impl.h  qmmf_offline_proc_impl.cc  qmmf_offline_proc_impl.h  qmmf_recorder_common.h  qmmf_recorder_impl.cc  qmmf_recorder_impl.h  qmmf_recorder_service.cc  qmmf_recorder_service.h  qmmf_recorder_utils.h  qmmf_remote_cb.cc  qmmf_remote_cb.h
recorder/test/gtest/: Android.mk  CMakeLists.txt  qmmf_gtest.cc  qmmf_gtest.h  qmmf_gtest_common.cc  qmmf_gtest_common.h  qmmf_hal1_gtest.cc  qmmf_hal1_gtest.h
